--- a/acceuil.css
+++ b/acceuil.css
@@ -159,12 +159,14 @@ nav li:hover .dropdown {
     height: 600px;
     overflow: hidden;
     animation: fadeIn 3.5s ease-out;
+   
 }
 
 .slider {
     width: 100%;
     height: 100%;
     position: relative;
+   
 }
 
 .slide {
@@ -179,6 +181,7 @@ nav li:hover .dropdown {
     justify-content: space-around;
     align-items: center;
     padding: 0 5%;
+    
 }
 
 .slide.active {
@@ -191,15 +194,15 @@ nav li:hover .dropdown {
 
 /* Styles des slides */
 .slide:nth-child(1) {
-    background-color: white;
+    background-color: #ccad24;
 }
 
 .slide:nth-child(2) {
-    background-color: white;
+    background-color: #ccad24;
 }
 
 .slide:nth-child(3) {
-    background-color: white;
+    background-color: #ccad24;
 }
 
 .hero-content {
@@ -260,7 +263,7 @@ nav li:hover .dropdown {
     transform: translateY(-50%);
     width: 50px;
     height: 50px;
-    background-color: rgba(255, 255, 255, 0.8);
+    
     border-radius: 50%;
     cursor: pointer;
     z-index: 10;
@@ -273,8 +276,8 @@ nav li:hover .dropdown {
 }
 
 .slider-btn:hover {
-    background-color:  #ccad24;
-    color: white;
+    background-color:  #000000;
+    color: #ccad24;
 }
 
 .slider-btn.prev {
@@ -552,11 +555,13 @@ nav li:hover .dropdown {
 .buy-btn{
     text-decoration: none;
     color:  #ccad24;
-    background-color: #070707;
+    background-color:transparent;
     padding: 10px 25px;
     font-weight: bold;
     border-radius: 10px;
     transition: all ease-in-out .3s;
+    border: solid 1px ;
+    font-size: 10px;
    
 }
 
@@ -721,12 +726,17 @@ footer {
    
 }
 
+.footer-column h4{
+    color: #ccad24;
+}
+
 .footer-column h3 {
     margin-bottom: 20px;
 }
 
 .footer-column p{
     margin-bottom: 10px;
+    
 }
 
 .footer-column ul {
@@ -735,6 +745,11 @@ footer {
 
 .footer-column li {
     margin-bottom: 10px;
+}
+
+.footer-column ul li a{
+    text-decoration: none;
+    color: #af8f25;
 }
 
 .subscribe-form input {
