--- a/assets/css/acceuil.css
+++ b/assets/css/acceuil.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -1046,4 +1045,36 @@ footer {
 /* Style pour les étoiles sélectionnées */
 .star.selected {
     color: #ffd700;
+}
+
+/* Assurez-vous que les images sont fluides */
+img, video {
+    max-width: 100%;
+    height: auto;
+}
+
+/* Amélioration de la réactivité des sections (sauf hero) */
+.services, .best-seller, .Products {
+    padding: 20px 5%;
+}
+
+/* Ajustement des grilles pour les petites tailles d'écran */
+.arrival, .best-seller-grid {
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+}
+
+/* Amélioration des media queries */
+@media screen and (max-width: 768px) {
+    .main-header {
+        flex-direction: row;
+        align-items: flex-start;
+    }
+
+    .footer-content {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .carrousel-content {
+        padding: 0 5%;
+    }
 }
