--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -281,16 +281,17 @@
 
 
        .slogan h1 {
-        font-size: 6rem;
+        font-size: 4rem;
         text-align: center;
         margin-bottom: 50px;
-        -webkit-text-stroke: 3px #ccad24;
-        -webkit-text-fill-color: rgba(0, 0, 0, 0);
+        color:#ead833 ;
+        font-family: "Protest Revolution", sans-serif;
+        
        }
 
        @media screen and (max-width: 768px) {
          .slogan h1 {
-           font-size: 4rem;
+           font-size: 2rem;
          }
        }
 
