--- a/assets/css/men.css
+++ b/assets/css/men.css
@@ -490,9 +490,7 @@ nav li:hover .dropdown {
   flex-direction: column;
 }
  
-.product-grid{
-  flex-direction: column;
-}
+
 
 
 .footer-content {
@@ -833,3 +831,89 @@ footer {
       grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   }
 }
+
+
+
+
+
+.best-sellers-title{
+  text-align: center;
+  font-size: 3rem;
+  margin-bottom: 50px;
+}
+
+.collections{
+  background-color: #f8f8f8;
+}
+
+
+.collection {
+    margin-bottom: 30px;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    
+   
+}
+.collection-title {
+    font-size: 24px;
+    color: #333;
+    text-align: center;
+    margin-bottom: 20px;
+}
+.products-grid {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 20px;
+}
+.products-card {
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    padding: 15px;
+    text-align: center;
+    transition: transform 0.3s ease;
+    display: flex;
+    flex-direction: column;
+    width: 350px;
+}
+.products-card:hover {
+    transform: scale(1.05);
+}
+.products-image {
+    max-width: 100%;
+    height: 250px;
+    object-fit: cover;
+    border-radius: 8px;
+}
+.product-name {
+    margin: 10px 0;
+    font-weight: bold;
+}
+.product-price {
+    color: #007bff;
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+.add-to-cart {
+    background-color: #28a745;
+    color: white;
+    border: none;
+    padding: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: auto;
+    transition: background-color 0.3s ease;
+}
+.add-to-cart:hover {
+    background-color: #218838;
+}
+
+
+@media screen and (max-width: 768px){
+
+}
+
