work on trending page

--- a/assets/css/acceuil.css
+++ b/assets/css/acceuil.css
@@ -394,7 +394,7 @@ nav li:hover .dropdown {
     margin-bottom: 10px;
 }
 
-.arrival {
+.arrivals {
     width: 1200px;
     margin: 0 auto;
     padding: 20px;
