--- a/assets/css/trending.css
+++ b/assets/css/trending.css
@@ -165,200 +165,6 @@ nav li:hover .dropdown {
 
 
 
-/* Hero Section */
-
-.hero {
-  position: relative;
-  height: 600px;
-  overflow: hidden;
-  animation: fadeIn 3.5s ease-out;
- 
-}
-
-.slider {
-  width: 100%;
-  height: 100%;
-  position: relative;
- 
-}
-
-.slide {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-  transition: opacity 0.5s ease-in-out;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  padding: 0 5%;
-  
-}
-
-.slide img{
-  width: 450px;
-}
-
-.slide.active {
-  opacity: 1;
-}
-/*
-.slide img{
-  width: 350px;
-}
-*/
-/* Styles des slides */
-.slide:nth-child(1) {
-  background-color: #ccad24;
-}
-
-.slide:nth-child(2) {
-  background-color: #ccad24;
-}
-
-.slide:nth-child(3) {
-  background-color: #ccad24;
-}
-
-.hero-content {
-  max-width: 600px;
-  z-index: 2;
-}
-
-.hero-content h1 {
-  font-size: 48px;
-  margin-bottom: 20px;
-  opacity: 0;
-  transform: translateY(20px);
-  transition: all 0.5s ease-out 0.3s;
-}
-
-.hero-content p {
-  margin-bottom: 30px;
-  opacity: 0;
-  transform: translateY(20px);
-  transition: all 0.5s ease-out 0.5s;
-}
-
-.slide.active .hero-content h1,
-.slide.active .hero-content p {
-  opacity: 1;
-  transform: translateY(0);
-}
-
-/* Navigation du Slider */
-.slider-nav {
-  position: absolute;
-  bottom: 30px;
-  left: 50%;
-  transform: translateX(-50%);
-  display: flex;
-  gap: 10px;
-  z-index: 10;
-}
-
-.slider-dot {
-  width: 12px;
-  height: 12px;
-  border-radius: 50%;
-  background-color: rgb(148, 147, 147);
-  cursor: pointer;
-  transition: all 0.3s ease;
-}
-
-.slider-dot.active {
-  background-color: #ccad24;
-  transform: scale(1.2);
-}
-
-/* Boutons précédent/suivant */
-.slider-btn {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  cursor: pointer;
-  z-index: 10;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 20px;
-  color: #333;
-  transition: all 0.3s ease;
-}
-
-.slider-btn:hover {
-  background-color:  #000000;
-  color: #ccad24;
-}
-
-.slider-btn.prev {
-  left: 20px;
-}
-
-.slider-btn.next {
-  right: 20px;
-}
-
-/* Style du bouton Shop Now */
-.shop-now-btn {
-  display: inline-block;
-  padding: 15px 35px;
-  background-color: #000;
-  color: white;
-  text-decoration: none;
-  border-radius: 4px;
-  transition: all 0.3s ease;
-  opacity: 0;
-  transform: translateY(20px);
-  transition: all 0.3s ease-out 0.5s;
-}
-
-.slide.active .shop-now-btn {
-  opacity: 1;
-  transform: translateY(0);
-}
-
-.shop-now-btn:hover {
-  background-color: #af8f25;
-}
-
-/* Services Section */
-.services {
-  display: flex;
-  justify-content: space-around;
-  padding: 40px 5%;
-  background-color: white;
-  animation: fadeIn 3.5s ease-out;
-}
-
-.service-item {
-  text-align: center;
-  max-width: 250px;
-}
-
-.service-item i {
-  font-size: 20px;
-  margin-bottom: 15px;
-}
-
-/* animation section hero */
-
-@keyframes fadeIn {
-  from {
-      opacity: 0;
-      transform: translateY(100px);
-  }
-  to {
-      opacity: 1;
-      transform: translateY(0);
-  }
-}
-
 
 
 
@@ -469,20 +275,6 @@ nav li:hover .dropdown {
       padding: 6px 0;
   }
 
-
-
- 
-  .slide{
-      flex-direction: column;
-      gap: 30px;
-      text-align: center;
-  }
-
-  .slide img{
-      width: 300px;
-  }
-
-
  
 
 .shop-info{
@@ -543,8 +335,8 @@ nav li:hover .dropdown {
 
 .container {
     display: flex;
-    width: 900px;
-    height: 300px;
+    width: 1200px;
+    height: 500px;
     gap: 10px;
 }
 .main-image-wrapper {
@@ -619,105 +411,200 @@ nav li:hover .dropdown {
 }
 
 
-/*--best sellers*/
-.best-sellers-title{
+.new-arrival{
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+}
+
+
+
+
+
+.collections{
+  background-color: #f8f8f8;
+}
+
+
+.collection {
+    margin-bottom: 30px;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
     text-align: center;
-    font-size: 3rem;
-    margin-bottom: 50px;
-  }
-
-
-  .product-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    
+   
+}
+.collection-title {
+  font-size: 4rem;
+  text-align: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+.products-grid {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     gap: 20px;
-    max-width: 1200px;
-    margin: 0 auto;
-  }
-  
-  .product-card {
+}
+
+/*
+.products-card {
     background-color: white;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-    padding: 20px;
+    padding: 15px;
     text-align: center;
     transition: transform 0.3s ease;
-  }
-  
-  .product-card:hover {
+    display: flex;
+    flex-direction: column;
+    width: 350px;
+}
+
+*/
+
+.products-card {
+    margin: 30px;
+  flex: 1;
+  border: 1px solid #e0e0e0;
+  border-radius: 8px;
+  padding: 15px;
+  text-align: center;
+  transition: transform 0.3s ease;
+}
+
+.products-card:hover {
     transform: scale(1.05);
-  }
-  
-  .product-card img {
-    max-width: 100%;
-    height: 250px;
-    object-fit: cover;
-    border-radius: 8px;
-    margin-bottom: 15px;
-  }
-  
-  .product-card h3 {
-    margin-bottom: 10px;
-    font-size: 1.2rem;
-  }
-  
-  .product-card .price {
-    color: #2ecc71;
+}
+.products-image {
+  max-width: 100%;
+  height: 250px;
+  border-radius: 8px;
+  margin-bottom: 10px;
+}
+.product-name {
+    margin: 10px 0;
     font-weight: bold;
-    font-size: 1.3rem;
-  }
-  
-  .product-card button {
-    background-color: #3498db;
+}
+.product-price {
+    color: #007bff;
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+.add-to-cart {
+    background-color:#ccad24 ;
     color: white;
     border: none;
-    padding: 10px 20px;
+    padding: 10px;
     border-radius: 5px;
     cursor: pointer;
-    margin-top: 15px;
+    margin-top: auto;
     transition: background-color 0.3s ease;
+}
+.add-to-cart:hover {
+    background-color: #218838;
+}
+
+
+@media screen and (max-width: 768px){
+  .collection{
+    flex-direction: column;
   }
-  
-  .product-card button:hover {
-    background-color: #2980b9;
+
+.products-grid {
+  flex-direction:column ;
+}
+
+}
+
+
+
+
+footer {
+  background-color: #070707;
+  padding: 60px 5% 20px;
+ 
+}
+
+.footer-content {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 10px;
+  display: flex;
+  justify-content: space-between;
+  gap: 30px;
+  flex-wrap: wrap;
+  color: #e8e8e8;
+ 
+}
+
+.footer-column h4 {
+  color: #ccad24;
+}
+
+.footer-column h3 {
+  margin-bottom: 20px;
+}
+
+.footer-column p {
+  margin-bottom: 10px;
+}
+
+.footer-column ul {
+  list-style: none;
+  padding: 0;
+}
+
+.footer-column li {
+  margin-bottom: 10px;
+}
+
+.footer-column ul li a {
+  text-decoration: none;
+  color: #888;
+  transition: color 0.3s;
+}
+
+.footer-column ul li a:hover {
+  color: #ccad24;
+}
+
+.subscribe-form input {
+  padding: 10px;
+  width: 70%;
+  margin-bottom: 10px;
+}
+
+.subscribe-btn {
+  padding: 10px 20px;
+  background-color: #ffffff;
+  color: rgb(0, 0, 0);
+  border: none;
+  cursor: pointer;
+}
+
+.socials a {
+  text-decoration: none;
+  color: #888;
+  transition: all ease 0.3s;
+}
+
+.socials a:hover {
+  color: #ccad24;
+}
+
+@media screen and (max-width: 768px) {
+  .footer-content {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
   }
-  
-  .modal {
-    display: none;
-    position: fixed;
-    z-index: 1000;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0,0,0,0.7);
-    align-items: center;
-    justify-content: center;
+}
+
+@media screen and (max-width: 480px) {
+  .footer-content {
+    grid-template-columns: 1fr;
   }
-  
-  .modal-content {
-    background-color: white;
-    padding: 30px;
-    border-radius: 10px;
-    width: 90%;
-    max-width: 600px;
-    position: relative;
-    text-align: center;
-  }
-  
-  .close-modal {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 30px;
-    cursor: pointer;
-  }
-  
-  @media (max-width: 768px) {
-    .product-grid {
-        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    }
-  }
-  
-  
+}
+
+
