--- a/assets/css/acceuil.css
+++ b/assets/css/acceuil.css
@@ -404,17 +404,16 @@ nav li:hover .dropdown {
     gap: 20px;
 }
 
-.products {
+.product {
     
     text-align: center;
-   
     border-radius: 10px;
     cursor: pointer;
     margin: 20px;
     transition: transform 0.3s;
 }
 
-.products:hover {
+.product:hover {
     transform: scale(1.05);
 }
 
@@ -875,10 +874,14 @@ footer {
             width: 100%;
         }
     
-        .arrival{
-            width: 300px;
-            grid-template-columns: repeat(2 , 1fr);
+        .arrivals{
+            width: 100px;
+            grid-template-columns: repeat(3, 1fr);
             justify-content: center;
+            align-items: center;
+            text-align: center;
+            align-content: center;
+           
         }
    
 }
@@ -969,6 +972,11 @@ footer {
         grid-template-columns: repeat(1, 1fr);
         text-align: center;
       
+    }
+
+
+    .arrivals{
+       
     }
 }
 
