--- a/assets/css/Terms&Conditions.css
+++ b/assets/css/Terms&Conditions.css
@@ -357,10 +357,34 @@ h2 {
 
 
 
+.faqs-container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 40px;
+  }
+  
+  .faq-item {
+    border-bottom: 1px solid #ddd;
+    padding: 20px 0;
+  }
+  
+  .faq-item h3 {
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+  
+  .faq-content {
+    font-size: 16px;
+    line-height: 1.5;
+  }
 
 
-
-
+span{
+    color: #ccad24;
+    font-size: 1.3rem;
+    font-weight: bold;
+}
 
 
 
